--- a/about.Rmd
+++ b/about.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "About Us"
-subtitle: "Columbia University Cardiothoracic Surgery Research Program"
+subtitle: "*Columbia University Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
     toc: true
@@ -14,14 +14,30 @@ editor_options:
 ## Primary Investigator 
 
  *Giovanni Ferrari, PhD*
+ 
+* [Twitter](https://twitter.com/ferrag02)
+* [Email](mailto:<gf2375@cumc.columbia.edu>)
 
 Associate Professor of Surgical Sciences and Scientific Director of the Cardiothoracic Research Program at Columbia University. He has over 13 years experience in the field of cell biology and cardiovascular medicine. After his postdoctoral work at New York University he became faculty and group leader at University of Pennsylvania, first as Assistant, and later, as Associate Professor. At UPenn he launched the Penn Cardiac Bioregistry for the division of cardiovascular surgery. In 2017 he relocated his program to Columbia. Currently he is directing the Columbia Biobank for Translational Studies (CBTS), an applied human biobank and clinical database supporting translational and precision medicine initiatives. Dr. Ferrari maintains his role as principal investigator of the Penn Cardiac Bioregistry and Adjunct Associate Professor at UPenn.
+
+Giovanni Ferrari, PhD\
+Associate Professor\
+Columbia University Department of Surgery\
+Director, Cardiothoracic Surgery Research\
+Director, Columbia Biobank for Translational Science (CBTS)\
+Black Building – 650 W. 168th Street, 4th Floor Suite 4-443\
+New York, NY 10032\
+Office: (212) 305-8615\
 
 \
 				
 ### Associate Research Scientists
 
  *Esti Castillero, PhD*
+ 
+ * [Twitter](https:twitter.com/esticastillero)
+
+
 
  *Chiara Camillo, PhD*
 
@@ -75,7 +91,7 @@ Mar Mas Martinez (Columbia U)
 
 \
 
-### *Past Alumni*
+### Alumni
 
 Residents:
 
