--- a/program.Rmd
+++ b/program.Rmd
@@ -3,6 +3,7 @@ title: "Research Program for Residents"
 subtitle: "*Columbia University Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
+    theme: journal
     toc: true
     toc_float: true
 editor_options: 
