--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,8 @@
 ---
 title: "Ferrari Lab"
-subtitle: "Columbia University Cardiothoracic Surgery Research Program"
+subtitle: "*Columbia University Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
-    theme: journal
     toc: true
     toc_float: true
 editor_options: 
