--- a/about.Rmd
+++ b/about.Rmd
@@ -85,7 +85,7 @@ Office: (212) 305-8615\
 
 ### Medical Students
 
- *Nicolo (U of Milan)*
+ *Nicolo Vitale (U of Milan)*
  
  *Eduardo (U of Bologna)*
  
@@ -95,7 +95,7 @@ Office: (212) 305-8615\
 
 ### Biomedical Engineering Students		
 
-*Mar Mas Martinez (Columbia University)*
+*Mar Martinez Mas (Columbia University)*
 
 \
 
