--- a/about.Rmd
+++ b/about.Rmd
@@ -48,9 +48,10 @@ First-generation graduate (U of Pavia, 2003), I am a group leader and Associate 
  
 ![](images/xue.JPG){width=25%}
 
-Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from University of Pittsburgh School of Pharmacy. His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches. His research goal is to understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.
+Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from [University of Pittsburgh School of Pharmacy](http://www.pharmacy.pitt.edu/research/research_index.php). His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches. His research goal is to understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.
 
-[Email](mailto:<yx2529@cumc.columbia.edu>)
+[Email](mailto:<yx2529@cumc.columbia.edu>)\
+
  
 
 *Antonio Frasca, PhD*
@@ -63,9 +64,7 @@ Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni F
 
 ![](images/abramov.jpg){width=25%}
 
-I am a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest a fellowship in cardiothoracic surgery. Currently, I am a post-doctoral research fellow in Dr. Ferrari's lab in the [Cardiothoracic Surgery Research Group](https://columbiasurgery.org/cardiothoracic-surgery-research/program-overview) and pursuing a Master's of Science degree in the Department of Biostatistics in the Mailmans School of Public Health with a concentration in [Clinical Research Methods](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods).  
-
-In my free time, I enjoy the outdoors, hiking, skiing, and riding my road bike.
+Dr. Alexey Abramov is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship. Currently, he is a post-doctoral research fellow in Dr. Ferrari's lab in the [Cardiothoracic Surgery Research Group](https://columbiasurgery.org/cardiothoracic-surgery-research/program-overview) and pursuing a Master's degree in the Department of Biostatistics in the Mailmans School of Public Health with a concentration in [Clinical Research Methods](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods). In my free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
 
 [Email](mailto:<aa3832@cumc.columbia.edu>)
  
@@ -107,7 +106,7 @@ In my free time, I enjoy the outdoors, hiking, skiing, and riding my road bike.
 
 ![](images/mas.jpg){width=25%}
 
-I am a Master’s student in Biomedical Engineering at Columbia University. I am from Barcelona, Spain, and I studied my undergraduate degree at Universitat Pompeu Fabra where I worked in the field of biomedical electronics. Afterward, I did the last year and a half of my degree at the Politecnico di Milano, where I mainly studied the field of biomechanics. My main interest lies in prosthetic heart valves and life support systems. I joined the Ferrari Lab in 2021. 
+I am a Master’s student in [Biomedical Engineering at Columbia University](https://www.bme.columbia.edu). I am from Barcelona, Spain, and I studied my undergraduate degree at [Universitat Pompeu Fabra](https://www.upf.edu/es/) where I worked in the field of biomedical electronics. Afterward, I did the last year and a half of my degree at the [Politecnico di Milano](https://www.polimi.it), where I mainly studied the field of biomechanics. My main interest lies in prosthetic heart valves and life support systems. I joined the Ferrari Lab in 2021. 
 
 [Email](mailto:<mm5944@columbia.edu>)
 
