added viv photo

--- a/about.Rmd
+++ b/about.Rmd
@@ -80,6 +80,8 @@ Dr. Alexey Abramov is a General Surgery resident in the [New York Presbyterian-C
 
  *Vivian Moreno*
 
+![](images/viv.jpg){width=25%}
+
 \
 
 ### Lab Manager
