--- a/about.Rmd
+++ b/about.Rmd
@@ -30,7 +30,9 @@ First-generation graduate (U of Pavia, 2003), I am a group leader and Associate 
 
 
 \
-				
+	
+## Lab Members 
+
 ### Associate Research Scientists
 
 *Esti Castillero, PhD*
