--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Ferrari Lab"
+subtitle: "*Columbia University Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
     toc: true
@@ -8,13 +9,10 @@ editor_options:
   chunk_output_type: console
 ---
 
-<center>
-# *Columbia University Cardiothoracic Surgery Research Program*
-</center>
 
-![](images/Screen Shot 2021-09-30 at 3.56.33 PM.png){width=100%}
+# Welcome
 
-# Home
+## Home
 
 Welcome to the Ferrari Laboratory website, we are located at the Columbia University Irving Medical Center in New York City, New York.
 
