--- a/about.Rmd
+++ b/about.Rmd
@@ -87,6 +87,10 @@ Dr. Alexey Abramov is a General Surgery resident in the [New York Presbyterian-C
 
 ![](images/viv.jpg){width=25%}
 
+Vivian Moreno, is the clinical research coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the University of Kent in Canterbury, England. Her research background includes cancer research at Yale University and novel antimicrobial peptides at NovaBiotics, Ltd. Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.
+
+[Email](mailto:<vmm2142@cumc.columbia.edu>)
+
 \
 
 ### Lab Manager
