--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Ferrari Lab"
-subtitle: "*Columbia University Medical Center: Cardiothoracic Surgery Research Program*"
+subtitle: "*Columbia University Irving Medical Center Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
     toc: true
