--- a/program.Rmd
+++ b/program.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Research Program for Residents"
-subtitle: "*Columbia University Cardiothoracic Surgery Research Program*"
+subtitle: "*Columbia University Irving Medical Center Cardiothoracic Surgery Research Program*"
 output: 
   html_document:
     theme: journal
