--- a/about.Rmd
+++ b/about.Rmd
@@ -185,4 +185,8 @@ The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. D
 
 *R01HL142504*
 
-#### Walter 
+### Walter 
+
+### Lara Garibeh PhD
+
+
