--- a/projects.Rmd
+++ b/projects.Rmd
@@ -16,7 +16,8 @@ editor_options:
 
 Degenerative mitral regurgitation (MR) due to myxomatous valve disease affects millions. The only treatment is either valve repair or replacement. This project will advance understanding of the role of the neurotransmitter, serotonin (5HT) in MR. Heart valve disease has been associated with both 5HT-secreting carcinoid tumors and medications, such as the diet drug, Dexfenfluoramine. We will investigate the hypothesis that 5HT-mechanisms involving the serotonin transporter (SERT), and 5HT receptor (HTR) signaling, both in platelets and mitral valve interstitial cells (MVIC) of bone marrow origin, contribute to the pathophysiology MR, and represent promising therapeutic targets. It is expected that the mechanistic results of these studies will lead to therapeutic directions for MR that target platelet-derived 5HT and leverage a personalized approach using BOEC to model the pathophysiology.
 
-*R01HL131872 (Ferrari G - Levy RJ)*
+*Funding Source*\
+*NIH R01HL131872 (Ferrari G - Levy RJ)*
 
 ## Ischemic Mitral Regurgitation\
 
@@ -55,12 +56,15 @@ This application has two overarching goals: to understand the mechanisms of acce
 
 Type 2 Diabetes mellitus (T2DM) is a well-known risk factor for heart valve disease, little is known about the mechanisms of accelerated failure of Bioprosthetic Heart Valve in this population. Using a next-generation proteomic approach on an established biobank of retrieved failed Bioprosthetic Heart Valve (BHV) explants and a patented precision medicine susceptibility assay using patient-derived serum we will assess how sexual dimorphism impact the durability of bioprosthetic heart valves in T2DM patients. Mitigation strategies aimed at reducing glycoxidation reactions will be tested to clinically graded valves chemically modified to improve the Bioprosthetic Valve durability of T2DM patients. 
 
-*Russell Berrie Foundation Pre-translational Diabetes Research Award*
-
+*Funding Source*\
+*Russell Berrie Foundation Pre-translational Diabetes Research Award*\
+[*Russell Berrie Foundation*](https://www.russellberriefoundation.org/diabetes-care-and-research)
 \
 
 ### Mechanisms of Cardiac Remodeling in COVID-19 Patients
 
 As a result of the COVID-19 pandemic, it has been shown that patients with pre-existing heart disease are likely to have more severe COVID-19 symptoms than those without pre-existing heart disease. We seek to test the hypothesis that SARS-CoV-2 induces cardiac injury by decreasing ACE2-mediated cardioprotection, and exacerbating AGE/RAGE-mediated cell signaling mechanisms. The 2 major things we seek to address are if this cell signaling pathway induces cardiac injury, and if circulating RAGE signaling markers be used as biomarkers of cardiovascular injury during acute COVID infection, and after recovery from infection. 
 
-*John Jones Surgical Society Fellowship*
+*Funding Source*\
+*John Jones Surgical Society Fellowship*\
+[*John Jones Surgical Society*](https://columbiasurgery.org/alumni/john-jones-surgical-society)
