--- a/projects.Rmd
+++ b/projects.Rmd
@@ -68,3 +68,11 @@ As a result of the COVID-19 pandemic, it has been shown that patients with pre-e
 *Funding Source*\
 *John Jones Surgical Society Fellowship*\
 [*John Jones Surgical Society*](https://columbiasurgery.org/alumni/john-jones-surgical-society)
+
+## Surgical Innovation
+
+### Patents\
+
+### Awards and Course\
+
+### Start Up\
